test canvas animation

--- a/playground/ts-test/html-js/canvas.html
+++ b/playground/ts-test/html-js/canvas.html
@@ -18,6 +18,163 @@
 <body>
     <canvas id="canvas"></canvas>
     <script>
+        let x = 1
+        const canvas = document.querySelector("canvas");
+        const ctx = canvas.getContext("2d");
+
+        const width = (canvas.width = window.innerWidth);
+        const height = (canvas.height = window.innerHeight);
+
+        // function to generate random number
+
+        function random(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
+
+        // function to generate random RGB color value
+
+        function randomRGB() {
+            return `rgb(${random(0, 255)},${random(0, 255)},${random(0, 255)})`;
+        }
+
+        class Ball {
+            constructor(x, y, velX, velY, color, size) {
+                this.x = x;
+                this.y = y;
+                this.velX = velX;
+                this.velY = velY;
+                this.color = color;
+                this.size = size;
+            }
+
+            draw() {
+                ctx.beginPath();
+                ctx.fillStyle = this.color;
+                ctx.arc(this.x, this.y, this.size, 0, 2 * Math.PI);
+                ctx.fill();
+            }
+
+            update() {
+                if (this.x + this.size >= width) {
+                    this.velX = -Math.abs(this.velX);
+                }
+
+                if (this.x - this.size <= 0) {
+                    this.velX = Math.abs(this.velX);
+                }
+
+                if (this.y + this.size >= height) {
+                    this.velY = -Math.abs(this.velY);
+                }
+
+                if (this.y - this.size <= 0) {
+                    this.velY = Math.abs(this.velY);
+                }
+
+                this.x += this.velX;
+                this.y += this.velY;
+            }
+
+            collisionDetect() {
+                for (const ball of balls) {
+                    if (!(this === ball)) {
+                        const dx = this.x - ball.x;
+                        const dy = this.y - ball.y;
+                        const distance = Math.sqrt(dx * dx + dy * dy);
+
+                        if (distance < this.size + ball.size) {
+                            ball.color = this.color = randomRGB();
+                        }
+                    }
+                }
+            }
+        }
+
+        const balls = [];
+
+        while (balls.length < 25) {
+            const size = random(10, 20);
+            const ball = new Ball(
+                // ball position always drawn at least one ball width
+                // away from the edge of the canvas, to avoid drawing errors
+                random(0 + size, width - size),
+                random(0 + size, height - size),
+                random(-7, 7),
+                random(-7, 7),
+                randomRGB(),
+                size
+            );
+
+            balls.push(ball);
+        }
+        let x_ = 1
+        let y_ = 1
+        let step = 5
+        let ismove = false
+        let currentKey = ''
+        function loop() {
+            ctx.fillStyle = "rgba(0, 0, 0, 0.25)";
+            ctx.fillRect(0, 0, width, height);
+
+            ctx.beginPath();
+            ctx.fillStyle = 'blue';
+            // ctx.rect(0, 0, 10, 10);
+            if (ismove) {
+               console.log(currentKey);
+                switch(currentKey) {
+                    case 'a': x_ -=step; break;
+                    case 'd': x_ += step; break;
+                    case 'w': y_ -= step; break;
+                    case 's': y_ +=step; break;
+                    case 'ds':
+                    case 'sd': x_ +=step; y_ +=step; break;
+                    case 'as':
+                    case 'sa': x_ -=step; y_ +=step; break;
+                    // case 'ws':
+                    // case 'sw': x_ --; y_ --; break;
+                    // case 'da':
+                    // case 'ad': x_ ++; y_ ++; break;
+                    case 'wa':
+                    case 'aw': x_-=step; y_ -=step; break;
+                    case 'wd':
+                    case 'dw': x_ +=step; y_ -=step; break;
+
+
+                }
+            }
+            ctx.arc(x_, y_, 10, 0, 2 * Math.PI);
+            ctx.fill();
+
+
+            // console.log(x++);
+            requestAnimationFrame(loop);
+        }
+        document.addEventListener('keydown', function (event) {
+            // console.log(event.key);
+            if(currentKey.length == 2 ) return
+            if(currentKey.length == 1 && currentKey != event.key) {
+                currentKey += event.key
+                return
+            }
+           ismove = true
+           currentKey = event.key
+        });
+        document.addEventListener('keyup', function (event) {
+            console.log('up',event.key);
+            if(currentKey.length == 2) {
+                currentKey = currentKey.replace(event.key,'')
+                if(currentKey == '') {
+                    ismove = false
+                }
+                return
+            }
+            ismove = false
+            currentKey = ''
+        });
+        loop();
+    </script>
+    <!-- canvas basic -->
+    <!-- <script>
         const canvas = document.querySelector('#canvas')
         canvas.width = window.innerWidth
         canvas.height = window.innerHeight
@@ -96,7 +253,7 @@
             ctx.stroke()
             ctx.rotate(degToRad(5))
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
